src/ui/radarr_ui/system/snapshots/managarr__ui__radarr_ui__system__system_details_ui__system_details_ui_tests__tests__system_details_ui_renders_logs.snap
---
source: src/ui/radarr_ui/system/system_details_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
              ╭  Log Details  ─────────────────────────────────────────────────────────────────────────╮                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              ╰────────────────────────────────────────────────────────────────────────────────────────╯
